<resources>
    <string name="app_name">Spectrum Map</string>
    <string name="Hello">Hello Guardians of the Spectrum!</string>
    <string name="about_text">This app is a crowdsourcing project for mapping signal spectrum.
        \n- Scan for identifying signal strengths around you.
        \n- Check your signal and phone information in MyInfo.
        \n- Send signal information to the server for analysis and visualization at Settings.
        \n- See signal strengths near you at the map on the Home screen.</string>
    <string name="imageDesc">Picture of our logo</string>
    <!-- description for the service. will appear on list of running processes on phone -->
    <string name="serviceDesc">The background scanning service for the Guardians of the Spectrum App</string>
    <string name="sendButton">Send Data</string>
    <!--
    <string name="scanButton">Scan</string>
    NTIA Spectrum Map - name of the app.
    -->
    <string name="deleteButton">Delete Files</string>
    <string name="menu_action_scan">Scan</string>
    <string name="menu_my_info">My Info</string> <!-- This is the top bar-->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="scanButton">scanButton</string>
    <string name="appname">ListDisplay</string>
    <string name="action_settings">Settings</string>
    <string name="graphButton">About Graphs</string>
    <string name="hardwareButton">My Phone Info</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_websearch">Web search</string>

    <!-- Settings Activity Strings -->
    <string name="scanServiceLabel">Background Scanning Service</string>
    <string name="scanServiceLabelTextOn">Enabled</string>
    <string name="scanServiceLabelTextOff">Disabled</string>
    <string name="storageCapTitle">Local Storage Data Cap</string>
    <string name="storageCapDesc">%s KB of data will be stored before sending data</string>
    <string name="notifyEnableTitle">Background Scanning Notifications</string>
    <string name="notifyOnDesc">Show notification when scanning in background</string>
    <string name="notifyOffDesc">Do not show notification when scanning in background</string>
    <string name="xAxisMyInfo">Time</string>

    <!-- Notification Strings -->
    <string name="notificationTitle">Background Scan Running</string>
    <string name="notificationText">Tap to toggle state</string>

    <!-- Scan Activity More Info -->
    <string name="LTE_info">The strength of an LTE signal is determined by the Reference Signal Received Power (RSRP).
        The reporting range of RSRP is -140 dBm to -44 dBm.
        Usable signal is tpyically in a range from -75 dBm (Excellent) to -120 dBm (Unusable) </string>
    <string name="WIFI_info">The strength of a WIFI signal is determined by the Received Siganl Strength Indicator (RSSI).
        RSSI ranges from -30 dBm (Excellent) to -90 (Unusable).</string>

    <!-- MyInfo Activity About Graphs -->
    <string name="Graph_text">Graphs are adjusted for bar representation. We added 150 to Cell
        Signal and 127 to WiFi Signal strength.\nVertical axis indicates signal strength.
        Horizontal axis indicates time of measurement.</string>
</resources>

