<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="storageCap"
        android:title="@string/storageCapTitle"
        android:dialogTitle="@string/storageCapTitle"
        android:summary="@string/storageCapDesc"
        android:entries="@array/storageCapNames"
        android:entryValues="@array/storageCapValues"
        android:defaultValue="100"/>
    <CheckBoxPreference
        android:key="notificationEnabled"
        android:title="@string/notifyEnableTitle"
        android:defaultValue="true" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="serviceSwitch"
        android:summary="@string/serviceDesc"
        android:title="@string/scanServiceLabel" />
</PreferenceScreen>