<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <item
        android:id="@+id/action_scan"
        android:title="@string/menu_action_scan"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_my_info"
        android:title="@string/menu_my_info"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom"/>


</menu>